Fix clipping of long titles

--- a/client/src/page-store-view/index.scss
+++ b/client/src/page-store-view/index.scss
@@ -25,7 +25,7 @@ $anim-time: 0.25s;
 
     .snippet {
         .title {
-            height: 1.75rem;
+            min-height: 1.75rem;
             margin-bottom: 0.5rem;
         }
 
